src/App.css
body,
html {
  width: 100%;
}
* {
  box-sizing: border-box;
  margin: 0;
  padding: auto;
}

@font-face {
  font-family: "Venite Adoremus Regular";
  font-style: normal;
  font-weight: normal;
  src: local("Venite Adoremus Regular"),
    url("./Assests/VeniteAdoremus-rgRBA.woff") format("woff");
}

@font-face {
  font-family: "Venite Adoremus Straight Regular";
  font-style: normal;
  font-weight: normal;
  src: local("Venite Adoremus Straight Regular"),
    url("./Assests/VeniteAdoremusStraight-Yzo6v.woff") format("woff");
}
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");

